--- a/home page/index.html
+++ b/home page/index.html
@@ -58,7 +58,7 @@
   </a>
   </section>
 
-     <h2><div class="medi1">LET'S SOLVE ISSUES PERTAINING TO:</div></h2>
+     <h2><div class="medi1 text-center"><b>LET'S SOLVE ISSUES PERTAINING TO</b></div></h2>
   <section id="section-services" class="section pad-bot30 bg-white">
     <div class="container">
 
