--- a/home page/index.html
+++ b/home page/index.html
@@ -87,6 +87,18 @@
   
             <div class="clear"></div>
           </div>
+
+          <div class="col-lg-4">
+            <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
+              <div class="float-left mar-right20">
+                <a href="#" class="hi-icon hi-icon-support">Mobile</a>
+              </div>
+            </div>
+            <h3 class="text-bold">Health</h3>
+            <p></p>
+  
+            <div class="clear"></div>
+          </div>
   
           <div class="col-lg-4">
             <div class="hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a mar-top20">
